--- a/jwbpro/style.css
+++ b/jwbpro/style.css
@@ -1,8 +1,9 @@
+
 /*********************
 *** MOD: JLopez MX ***
 *********************/
-body{padding:0;margin:0;box-sizing:border-box}
-body.videoplayer{overflow:hidden}
+//body{padding:0;margin:0;box-sizing:border-box}
+//body.videoplayer{overflow:hidden}
 .embed-container{text-align:center;width:100%;height:100%;padding:0;margin:0;background:#000;position:absolute;color:#fff}
 .embed-wrapper{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);width:90%}
 iframe{border:none}
